versions/0.14.0/_sources/refs/_aws-cdk_aws-dynamodb.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"m8Gis5oTSaXUs44MM172wLru08jYEznNCmSPzHJLrAU="}

@aws-cdk/aws-dynamodb
=====================

.. mdinclude:: ./__aws-cdk_aws-dynamodb.README.md

Reference
---------

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.DynamoDB/0.14.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.DynamoDB" Version="0.14.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.DynamoDB --version 0.14.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.DynamoDB" version="0.14.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/dynamodb/0.14.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:dynamodb:jar:0.14.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="dynamodb" rev="0.14.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>dynamodb</artifactId>
           <version>0.14.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:dynamodb:0.14.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='dynamodb', version='0.14.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-dynamodb/v/0.14.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-dynamodb@0.14.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-dynamodb": "^0.14.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-dynamodb@0.14.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-dynamodb/v/0.14.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-dynamodb@0.14.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-dynamodb": "^0.14.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-dynamodb@0.14.0



.. py:module:: @aws-cdk/aws-dynamodb

Attribute (interface)
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: Attribute

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.Attribute;

      .. code-tab:: javascript

         // Attribute is an interface

      .. code-tab:: typescript

         import { Attribute } from '@aws-cdk/aws-dynamodb';





   .. py:attribute:: name

      The name of an attribute.


      :type: string *(abstract)*


   .. py:attribute:: type

      The data type of an attribute.


      :type: :py:class:`~@aws-cdk/aws-dynamodb.AttributeType`\  *(abstract)*


AttributeType (enum)
^^^^^^^^^^^^^^^^^^^^

.. py:class:: AttributeType

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.AttributeType;

      .. code-tab:: javascript

         const { AttributeType } = require('@aws-cdk/aws-dynamodb');

      .. code-tab:: typescript

         import { AttributeType } from '@aws-cdk/aws-dynamodb';



   .. py:data:: Binary

   .. py:data:: Number

   .. py:data:: String


EnableScalingProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: EnableScalingProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.EnableScalingProps;

      .. code-tab:: javascript

         // EnableScalingProps is an interface

      .. code-tab:: typescript

         import { EnableScalingProps } from '@aws-cdk/aws-dynamodb';



   Properties for enabling DynamoDB capacity scaling




   .. py:attribute:: maxCapacity

      Maximum capacity to scale to


      :type: number *(abstract)*


   .. py:attribute:: minCapacity

      Minimum capacity to scale to


      :type: number *(abstract)*


GlobalSecondaryIndexProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: GlobalSecondaryIndexProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.GlobalSecondaryIndexProps;

      .. code-tab:: javascript

         // GlobalSecondaryIndexProps is an interface

      .. code-tab:: typescript

         import { GlobalSecondaryIndexProps } from '@aws-cdk/aws-dynamodb';



   :extends: :py:class:`~@aws-cdk/aws-dynamodb.SecondaryIndexProps`\ 


   .. py:attribute:: partitionKey

      The attribute of a partition key for the global secondary index.


      :type: :py:class:`~@aws-cdk/aws-dynamodb.Attribute`\  *(abstract)*


   .. py:attribute:: readCapacity

      The read capacity for the global secondary index.


      :type: number or ``undefined`` *(abstract)*


   .. py:attribute:: sortKey

      The attribute of a sort key for the global secondary index.


      :type: :py:class:`~@aws-cdk/aws-dynamodb.Attribute`\  or ``undefined`` *(abstract)*


   .. py:attribute:: writeCapacity

      The write capacity for the global secondary index.


      :type: number or ``undefined`` *(abstract)*


   .. py:attribute:: indexName

      *Inherited from* :py:attr:`@aws-cdk/aws-dynamodb.SecondaryIndexProps <@aws-cdk/aws-dynamodb.SecondaryIndexProps.indexName>`

      The name of the secondary index.


      :type: string *(abstract)*


   .. py:attribute:: nonKeyAttributes

      *Inherited from* :py:attr:`@aws-cdk/aws-dynamodb.SecondaryIndexProps <@aws-cdk/aws-dynamodb.SecondaryIndexProps.nonKeyAttributes>`

      The non-key attributes that are projected into the secondary index.


      :type: string[] or ``undefined`` *(abstract)*


   .. py:attribute:: projectionType

      *Inherited from* :py:attr:`@aws-cdk/aws-dynamodb.SecondaryIndexProps <@aws-cdk/aws-dynamodb.SecondaryIndexProps.projectionType>`

      The set of attributes that are projected into the secondary index.


      :type: :py:class:`~@aws-cdk/aws-dynamodb.ProjectionType`\  or ``undefined`` *(abstract)*


IScalableTableAttribute (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: IScalableTableAttribute

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.IScalableTableAttribute;

      .. code-tab:: javascript

         // IScalableTableAttribute is an interface

      .. code-tab:: typescript

         import { IScalableTableAttribute } from '@aws-cdk/aws-dynamodb';



   Interface for scalable attributes




   .. py:method:: scaleOnSchedule(id, actions)

      Add scheduled scaling for this scaling attribute


      :param id: 
      :type id: string
      :param actions: 
      :type actions: :py:class:`@aws-cdk/aws-applicationautoscaling.ScalingSchedule`\ 
      :abstract: Yes


   .. py:method:: scaleOnUtilization(props)

      Scale out or in to keep utilization at a given level


      :param props: 
      :type props: :py:class:`~@aws-cdk/aws-dynamodb.UtilizationScalingProps`\ 
      :abstract: Yes


LocalSecondaryIndexProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LocalSecondaryIndexProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.LocalSecondaryIndexProps;

      .. code-tab:: javascript

         // LocalSecondaryIndexProps is an interface

      .. code-tab:: typescript

         import { LocalSecondaryIndexProps } from '@aws-cdk/aws-dynamodb';



   :extends: :py:class:`~@aws-cdk/aws-dynamodb.SecondaryIndexProps`\ 


   .. py:attribute:: sortKey

      The attribute of a sort key for the local secondary index.


      :type: :py:class:`~@aws-cdk/aws-dynamodb.Attribute`\  *(abstract)*


   .. py:attribute:: indexName

      *Inherited from* :py:attr:`@aws-cdk/aws-dynamodb.SecondaryIndexProps <@aws-cdk/aws-dynamodb.SecondaryIndexProps.indexName>`

      The name of the secondary index.


      :type: string *(abstract)*


   .. py:attribute:: nonKeyAttributes

      *Inherited from* :py:attr:`@aws-cdk/aws-dynamodb.SecondaryIndexProps <@aws-cdk/aws-dynamodb.SecondaryIndexProps.nonKeyAttributes>`

      The non-key attributes that are projected into the secondary index.


      :type: string[] or ``undefined`` *(abstract)*


   .. py:attribute:: projectionType

      *Inherited from* :py:attr:`@aws-cdk/aws-dynamodb.SecondaryIndexProps <@aws-cdk/aws-dynamodb.SecondaryIndexProps.projectionType>`

      The set of attributes that are projected into the secondary index.


      :type: :py:class:`~@aws-cdk/aws-dynamodb.ProjectionType`\  or ``undefined`` *(abstract)*


ProjectionType (enum)
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ProjectionType

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.ProjectionType;

      .. code-tab:: javascript

         const { ProjectionType } = require('@aws-cdk/aws-dynamodb');

      .. code-tab:: typescript

         import { ProjectionType } from '@aws-cdk/aws-dynamodb';



   .. py:data:: KeysOnly

   .. py:data:: Include

   .. py:data:: All


SecondaryIndexProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: SecondaryIndexProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.SecondaryIndexProps;

      .. code-tab:: javascript

         // SecondaryIndexProps is an interface

      .. code-tab:: typescript

         import { SecondaryIndexProps } from '@aws-cdk/aws-dynamodb';





   .. py:attribute:: indexName

      The name of the secondary index.


      :type: string *(abstract)*


   .. py:attribute:: nonKeyAttributes

      The non-key attributes that are projected into the secondary index.


      :type: string[] or ``undefined`` *(abstract)*


   .. py:attribute:: projectionType

      The set of attributes that are projected into the secondary index.


      :type: :py:class:`~@aws-cdk/aws-dynamodb.ProjectionType`\  or ``undefined`` *(abstract)*


StreamViewType (enum)
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: StreamViewType

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.StreamViewType;

      .. code-tab:: javascript

         const { StreamViewType } = require('@aws-cdk/aws-dynamodb');

      .. code-tab:: typescript

         import { StreamViewType } from '@aws-cdk/aws-dynamodb';



   When an item in the table is modified, StreamViewType determines what information is written to the stream for this table. Valid values for StreamViewType are:
   https://docs.aws.amazon.com/amazondynamodb/latest/APIReference/API_StreamSpecification.html


   .. py:data:: NewImage

   The entire item, as it appears after it was modified, is written to the stream.


   .. py:data:: OldImage

   The entire item, as it appeared before it was modified, is written to the stream.


   .. py:data:: NewAndOldImages

   Both the new and the old item images of the item are written to the stream.


   .. py:data:: KeysOnly

   Only the key attributes of the modified item are written to the stream.



Table
^^^^^

.. py:class:: Table(parent, name, [props])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.Table;

      .. code-tab:: javascript

         const { Table } = require('@aws-cdk/aws-dynamodb');

      .. code-tab:: typescript

         import { Table } from '@aws-cdk/aws-dynamodb';



   Provides a DynamoDB table.


   :extends: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-dynamodb.TableProps`\  or ``undefined``

   .. py:method:: addGlobalSecondaryIndex(props)

      Add a global secondary index of table.


      :param props: the property of global secondary index
      :type props: :py:class:`~@aws-cdk/aws-dynamodb.GlobalSecondaryIndexProps`\ 


   .. py:method:: addLocalSecondaryIndex(props)

      Add a local secondary index of table.


      :param props: the property of local secondary index
      :type props: :py:class:`~@aws-cdk/aws-dynamodb.LocalSecondaryIndexProps`\ 


   .. py:method:: addPartitionKey(attribute) -> @aws-cdk/aws-dynamodb.Table

      Add a partition key of table.


      :param attribute: the partition key attribute of table
      :type attribute: :py:class:`~@aws-cdk/aws-dynamodb.Attribute`\ 
      :return: a reference to this object so that method calls can be chained together
      :rtype: :py:class:`~@aws-cdk/aws-dynamodb.Table`\ 


   .. py:method:: addSortKey(attribute) -> @aws-cdk/aws-dynamodb.Table

      Add a sort key of table.


      :param attribute: the sort key of table
      :type attribute: :py:class:`~@aws-cdk/aws-dynamodb.Attribute`\ 
      :return: a reference to this object so that method calls can be chained together
      :rtype: :py:class:`~@aws-cdk/aws-dynamodb.Table`\ 


   .. py:method:: autoScaleGlobalSecondaryIndexReadCapacity(indexName, props) -> @aws-cdk/aws-dynamodb.IScalableTableAttribute

      Enable read capacity scaling for the given GSI


      :param indexName: 
      :type indexName: string
      :param props: 
      :type props: :py:class:`~@aws-cdk/aws-dynamodb.EnableScalingProps`\ 
      :return: An object to configure additional AutoScaling settings for this attribute
      :rtype: :py:class:`~@aws-cdk/aws-dynamodb.IScalableTableAttribute`\ 


   .. py:method:: autoScaleGlobalSecondaryIndexWriteCapacity(indexName, props) -> @aws-cdk/aws-dynamodb.IScalableTableAttribute

      Enable write capacity scaling for the given GSI


      :param indexName: 
      :type indexName: string
      :param props: 
      :type props: :py:class:`~@aws-cdk/aws-dynamodb.EnableScalingProps`\ 
      :return: An object to configure additional AutoScaling settings for this attribute
      :rtype: :py:class:`~@aws-cdk/aws-dynamodb.IScalableTableAttribute`\ 


   .. py:method:: autoScaleReadCapacity(props) -> @aws-cdk/aws-dynamodb.IScalableTableAttribute

      Enable read capacity scaling for this table


      :param props: 
      :type props: :py:class:`~@aws-cdk/aws-dynamodb.EnableScalingProps`\ 
      :return: An object to configure additional AutoScaling settings
      :rtype: :py:class:`~@aws-cdk/aws-dynamodb.IScalableTableAttribute`\ 


   .. py:method:: autoScaleWriteCapacity(props) -> @aws-cdk/aws-dynamodb.IScalableTableAttribute

      Enable write capacity scaling for this table


      :param props: 
      :type props: :py:class:`~@aws-cdk/aws-dynamodb.EnableScalingProps`\ 
      :return: An object to configure additional AutoScaling settings for this attribute
      :rtype: :py:class:`~@aws-cdk/aws-dynamodb.IScalableTableAttribute`\ 


   .. py:method:: grant(principal, *actions)

      Adds an IAM policy statement associated with this table to an IAM principal's policy.


      :param principal: The principal (no-op if undefined)
      :type principal: :py:class:`@aws-cdk/aws-iam.IPrincipal`\  or ``undefined``
      :param \*actions: The set of actions to allow (i.e. "dynamodb:PutItem", "dynamodb:GetItem", ...)
      :type \*actions: string


   .. py:method:: grantFullAccess([principal])

      Permits all DynamoDB operations ("dynamodb:*") to an IAM principal.


      :param principal: The principal to grant access to
      :type principal: :py:class:`@aws-cdk/aws-iam.IPrincipal`\  or ``undefined``


   .. py:method:: grantReadData([principal])

      Permits an IAM principal all data read operations from this table: BatchGetItem, GetRecords, GetShardIterator, Query, GetItem, Scan.


      :param principal: The principal to grant access to
      :type principal: :py:class:`@aws-cdk/aws-iam.IPrincipal`\  or ``undefined``


   .. py:method:: grantReadWriteData([principal])

      Permits an IAM principal to all data read/write operations to this table. BatchGetItem, GetRecords, GetShardIterator, Query, GetItem, Scan, BatchWriteItem, PutItem, UpdateItem, DeleteItem


      :param principal: The principal to grant access to
      :type principal: :py:class:`@aws-cdk/aws-iam.IPrincipal`\  or ``undefined``


   .. py:method:: grantWriteData([principal])

      Permits an IAM principal all data write operations to this table: BatchWriteItem, PutItem, UpdateItem, DeleteItem.


      :param principal: The principal to grant access to
      :type principal: :py:class:`@aws-cdk/aws-iam.IPrincipal`\  or ``undefined``


   .. py:method:: validate() -> string[]

      *Overrides* :py:meth:`@aws-cdk/cdk.Construct.validate`

      Validate the table construct.


      :return: an array of validation error message
      :rtype: string[]


   .. py:attribute:: tableArn

      :type: string *(readonly)*


   .. py:attribute:: tableName

      :type: string *(readonly)*


   .. py:attribute:: tableStreamArn

      :type: string *(readonly)*


   .. py:method:: addChild(child, childName)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.addChild>`

      Adds a child construct to this node.


      *Protected method*

      :param child: The child construct
      :type child: :py:class:`@aws-cdk/cdk.Construct`\ 
      :param childName: 
      :type childName: string
      :return: The resolved path part name of the child


   .. py:method:: addError(message) -> @aws-cdk/cdk.Construct

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.addError>`

      Adds an { error: <message> } metadata entry to this construct. The toolkit will fail synthesis when errors are reported.


      :param message: The error message.
      :type message: string
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\ 


   .. py:method:: addInfo(message) -> @aws-cdk/cdk.Construct

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.addInfo>`

      Adds a { "aws:cdk:info": <message> } metadata entry to this construct. The toolkit will display the info message when apps are synthesized.


      :param message: The info message.
      :type message: string
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\ 


   .. py:method:: addMetadata(type, [data, [from]]) -> @aws-cdk/cdk.Construct

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.addMetadata>`

      Adds a metadata entry to this construct. Entries are arbitrary values and will also include a stack trace to allow tracing back to the code location for when the entry was added. It can be used, for example, to include source mapping in CloudFormation templates to improve diagnostics.


      :param type: a string denoting the type of metadata
      :type type: string
      :param data: the value of the metadata (can be a Token). If null/undefined, metadata will not be added.
      :type data: any or ``undefined``
      :param from: a function under which to restrict the metadata entry's stack trace (defaults to this.addMetadata)
      :type from: any or ``undefined``
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\ 


   .. py:method:: addWarning(message) -> @aws-cdk/cdk.Construct

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.addWarning>`

      Adds a { warning: <message> } metadata entry to this construct. The toolkit will display the warning when an app is synthesized, or fail if run in --strict mode.


      :param message: The warning message.
      :type message: string
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\ 


   .. py:method:: ancestors([upTo]) -> @aws-cdk/cdk.Construct[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.ancestors>`

      Return the ancestors (including self) of this Construct up until and excluding the indicated component


      :param upTo: 
      :type upTo: :py:class:`@aws-cdk/cdk.Construct`\  or ``undefined``
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\ []


   .. py:method:: findChild(path) -> @aws-cdk/cdk.Construct

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.findChild>`

      Return a descendant by path  Throws an exception if the descendant is not found.


      :param path: 
      :type path: string
      :return: Child with the given path.
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\ 


   .. py:method:: getContext(key) -> any

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.getContext>`

      Retrieves a value from tree context.  Context is usually initialized at the root, but can be overridden at any point in the tree.


      :param key: The context key
      :type key: string
      :return: The context value or undefined
      :rtype: any or ``undefined``


   .. py:method:: lock()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.lock>`

      Locks this construct from allowing more children to be added. After this call, no more children can be added to this construct or to any children.


      *Protected method*



   .. py:method:: requireContext(key) -> any

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.requireContext>`

      Retrieve a value from tree-global context  It is an error if the context object is not available.


      :param key: 
      :type key: string
      :rtype: any or ``undefined``


   .. py:method:: required(props, name) -> any

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.required>`

      Throws if the `props` bag doesn't include the property `name`. In the future we can add some type-checking here, maybe even auto-generate during compilation.


      *Protected method*

      :param props: The props bag.
      :type props: any or ``undefined``
      :param name: The name of the required property.
      :type name: string
      :rtype: any or ``undefined``


   .. py:method:: setContext(key, [value])

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.setContext>`

      This can be used to set contextual values. Context must be set before any children are added, since children may consult context info during construction. If the key already exists, it will be overridden.


      :param key: The context key
      :type key: string
      :param value: The context value
      :type value: any or ``undefined``


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.


      :rtype: string


   .. py:method:: toTreeString([depth]) -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toTreeString>`

      Returns a string with a tree representation of this construct and it's children.


      :param depth: 
      :type depth: number or ``undefined``
      :rtype: string


   .. py:method:: tryFindChild(path) -> @aws-cdk/cdk.Construct

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.tryFindChild>`

      Return a descendant by path, or undefined


      :param path: 
      :type path: string
      :return: a child by path or undefined if not found.
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\  or ``undefined``


   .. py:method:: unlock()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.unlock>`

      Unlocks this costruct and allows mutations (adding children).


      *Protected method*



   .. py:method:: validateTree() -> @aws-cdk/cdk.ValidationError[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validateTree>`

      Invokes 'validate' on all child constructs and then on this construct (depth-first).


      :return: A list of validation errors. If the list is empty, all constructs are valid.
      :rtype: :py:class:`@aws-cdk/cdk.ValidationError`\ []


   .. py:attribute:: children

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.children>`

      All direct children of this construct.


      :type: :py:class:`@aws-cdk/cdk.Construct`\ [] *(readonly)*


   .. py:attribute:: id

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.id>`

      The local id of the construct. This id is unique amongst its siblings. To obtain a tree-global unique id for this construct, use `uniqueId`.


      :type: string *(readonly)*


   .. py:attribute:: locked

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.locked>`

      Returns true if this construct or any of it's parent constructs are locked.


      *Protected property*

      :type: boolean *(readonly)*


   .. py:attribute:: metadata

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.metadata>`

      An array of metadata objects associated with this construct. This can be used, for example, to implement support for deprecation notices, source mapping, etc.


      :type: :py:class:`@aws-cdk/cdk.MetadataEntry`\ [] *(readonly)*


   .. py:attribute:: path

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.path>`

      The full path of this construct in the tree. Components are separated by '/'.


      :type: string *(readonly)*


   .. py:attribute:: uniqueId

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.uniqueId>`

      A tree-global unique alphanumeric identifier for this construct. Includes all components of the tree.


      :type: string *(readonly)*


   .. py:attribute:: parent

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.parent>`

      Returns the parent of this node or undefined if this is a root node.


      :type: :py:class:`@aws-cdk/cdk.Construct`\  or ``undefined`` *(readonly)*


TableProps (interface)
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: TableProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.TableProps;

      .. code-tab:: javascript

         // TableProps is an interface

      .. code-tab:: typescript

         import { TableProps } from '@aws-cdk/aws-dynamodb';





   .. py:attribute:: pitrEnabled

      Whether point-in-time recovery is enabled.


      :type: boolean or ``undefined`` *(abstract)*


   .. py:attribute:: readCapacity

      The read capacity for the table. Careful if you add Global Secondary Indexes, as those will share the table's provisioned throughput.


      :type: number or ``undefined`` *(abstract)*


   .. py:attribute:: sseEnabled

      Whether server-side encryption is enabled.


      :type: boolean or ``undefined`` *(abstract)*


   .. py:attribute:: streamSpecification

      When an item in the table is modified, StreamViewType determines what information is written to the stream for this table. Valid values for StreamViewType are:


      :type: :py:class:`~@aws-cdk/aws-dynamodb.StreamViewType`\  or ``undefined`` *(abstract)*


   .. py:attribute:: tableName

      Enforces a particular physical table name.


      :type: string or ``undefined`` *(abstract)*


   .. py:attribute:: tags

      The AWS resource tags to associate with the table.


      :type: string => string or ``undefined`` *(abstract)*


   .. py:attribute:: ttlAttributeName

      The name of TTL attribute.


      :type: string or ``undefined`` *(abstract)*


   .. py:attribute:: writeCapacity

      The write capacity for the table. Careful if you add Global Secondary Indexes, as those will share the table's provisioned throughput.


      :type: number or ``undefined`` *(abstract)*


UtilizationScalingProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: UtilizationScalingProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.UtilizationScalingProps;

      .. code-tab:: javascript

         // UtilizationScalingProps is an interface

      .. code-tab:: typescript

         import { UtilizationScalingProps } from '@aws-cdk/aws-dynamodb';



   Properties for enabling DynamoDB utilization tracking


   :extends: :py:class:`@aws-cdk/aws-applicationautoscaling.BaseTargetTrackingProps`\ 


   .. py:attribute:: targetUtilizationPercent

      Target utilization percentage for the attribute


      :type: number *(abstract)*


   .. py:attribute:: disableScaleIn

      *Inherited from* :py:attr:`@aws-cdk/aws-applicationautoscaling.BaseTargetTrackingProps <@aws-cdk/aws-applicationautoscaling.BaseTargetTrackingProps.disableScaleIn>`

      Indicates whether scale in by the target tracking policy is disabled.  If the value is true, scale in is disabled and the target tracking policy won't remove capacity from the scalable resource. Otherwise, scale in is enabled and the target tracking policy can remove capacity from the scalable resource.


      :type: boolean or ``undefined`` *(abstract)*


   .. py:attribute:: policyName

      *Inherited from* :py:attr:`@aws-cdk/aws-applicationautoscaling.BaseTargetTrackingProps <@aws-cdk/aws-applicationautoscaling.BaseTargetTrackingProps.policyName>`

      A name for the scaling policy


      :type: string or ``undefined`` *(abstract)*


   .. py:attribute:: scaleInCooldownSec

      *Inherited from* :py:attr:`@aws-cdk/aws-applicationautoscaling.BaseTargetTrackingProps <@aws-cdk/aws-applicationautoscaling.BaseTargetTrackingProps.scaleInCooldownSec>`

      Period after a scale in activity completes before another scale in activity can start.


      :type: number or ``undefined`` *(abstract)*


   .. py:attribute:: scaleOutCooldownSec

      *Inherited from* :py:attr:`@aws-cdk/aws-applicationautoscaling.BaseTargetTrackingProps <@aws-cdk/aws-applicationautoscaling.BaseTargetTrackingProps.scaleOutCooldownSec>`

      Period after a scale out activity completes before another scale out activity can start.


      :type: number or ``undefined`` *(abstract)*



cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-dynamodb.cloudformation

TableResource
~~~~~~~~~~~~~

.. py:class:: TableResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.cloudformation.TableResource;

      .. code-tab:: javascript

         const { cloudformation.TableResource } = require('@aws-cdk/aws-dynamodb');

      .. code-tab:: typescript

         import { cloudformation.TableResource } from '@aws-cdk/aws-dynamodb';



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param parent: the ``cdk.Construct`` this ``TableResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``TableResource``
   :type properties: :py:class:`~@aws-cdk/aws-dynamodb.cloudformation.TableResourceProps`\ 

   .. py:method:: renderProperties([properties]) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.Resource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any or ``undefined``
      :rtype: string => (any or ``undefined``)


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-dynamodb.cloudformation.TableResourceProps`\  *(readonly)*


   .. py:attribute:: tableArn

      :type: string *(readonly)*


   .. py:attribute:: tableName

      :type: string *(readonly)*


   .. py:attribute:: tableStreamArn

      :type: string *(readonly)*

   .. py:class:: AttributeDefinitionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.cloudformation.TableResource.AttributeDefinitionProperty;

         .. code-tab:: javascript

            // cloudformation.TableResource.AttributeDefinitionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TableResource.AttributeDefinitionProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: attributeName

         ``TableResource.AttributeDefinitionProperty.AttributeName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-attributedef.html#cfn-dynamodb-attributedef-attributename


         :type: string or :py:class:`@aws-cdk/cdk.Token`\  *(abstract)*


      .. py:attribute:: attributeType

         ``TableResource.AttributeDefinitionProperty.AttributeType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-attributedef.html#cfn-dynamodb-attributedef-attributename-attributetype


         :type: string or :py:class:`@aws-cdk/cdk.Token`\  *(abstract)*


   .. py:class:: GlobalSecondaryIndexProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.cloudformation.TableResource.GlobalSecondaryIndexProperty;

         .. code-tab:: javascript

            // cloudformation.TableResource.GlobalSecondaryIndexProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TableResource.GlobalSecondaryIndexProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: indexName

         ``TableResource.GlobalSecondaryIndexProperty.IndexName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-gsi.html#cfn-dynamodb-gsi-indexname


         :type: string or :py:class:`@aws-cdk/cdk.Token`\  *(abstract)*


      .. py:attribute:: keySchema

         ``TableResource.GlobalSecondaryIndexProperty.KeySchema``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-gsi.html#cfn-dynamodb-gsi-keyschema


         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`~@aws-cdk/aws-dynamodb.cloudformation.TableResource.KeySchemaProperty`\  or :py:class:`@aws-cdk/cdk.Token`\ )[] *(abstract)*


      .. py:attribute:: projection

         ``TableResource.GlobalSecondaryIndexProperty.Projection``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-gsi.html#cfn-dynamodb-gsi-projection


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.cloudformation.TableResource.ProjectionProperty`\  *(abstract)*


      .. py:attribute:: provisionedThroughput

         ``TableResource.GlobalSecondaryIndexProperty.ProvisionedThroughput``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-gsi.html#cfn-dynamodb-gsi-provisionedthroughput


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.cloudformation.TableResource.ProvisionedThroughputProperty`\  *(abstract)*


   .. py:class:: KeySchemaProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.cloudformation.TableResource.KeySchemaProperty;

         .. code-tab:: javascript

            // cloudformation.TableResource.KeySchemaProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TableResource.KeySchemaProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: attributeName

         ``TableResource.KeySchemaProperty.AttributeName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-keyschema.html#aws-properties-dynamodb-keyschema-attributename


         :type: string or :py:class:`@aws-cdk/cdk.Token`\  *(abstract)*


      .. py:attribute:: keyType

         ``TableResource.KeySchemaProperty.KeyType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-keyschema.html#aws-properties-dynamodb-keyschema-keytype


         :type: string or :py:class:`@aws-cdk/cdk.Token`\  *(abstract)*


   .. py:class:: LocalSecondaryIndexProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.cloudformation.TableResource.LocalSecondaryIndexProperty;

         .. code-tab:: javascript

            // cloudformation.TableResource.LocalSecondaryIndexProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TableResource.LocalSecondaryIndexProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: indexName

         ``TableResource.LocalSecondaryIndexProperty.IndexName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-lsi.html#cfn-dynamodb-lsi-indexname


         :type: string or :py:class:`@aws-cdk/cdk.Token`\  *(abstract)*


      .. py:attribute:: keySchema

         ``TableResource.LocalSecondaryIndexProperty.KeySchema``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-lsi.html#cfn-dynamodb-lsi-keyschema


         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`~@aws-cdk/aws-dynamodb.cloudformation.TableResource.KeySchemaProperty`\  or :py:class:`@aws-cdk/cdk.Token`\ )[] *(abstract)*


      .. py:attribute:: projection

         ``TableResource.LocalSecondaryIndexProperty.Projection``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-lsi.html#cfn-dynamodb-lsi-projection


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.cloudformation.TableResource.ProjectionProperty`\  *(abstract)*


   .. py:class:: PointInTimeRecoverySpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.cloudformation.TableResource.PointInTimeRecoverySpecificationProperty;

         .. code-tab:: javascript

            // cloudformation.TableResource.PointInTimeRecoverySpecificationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TableResource.PointInTimeRecoverySpecificationProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: pointInTimeRecoveryEnabled

         ``TableResource.PointInTimeRecoverySpecificationProperty.PointInTimeRecoveryEnabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-table-pointintimerecoveryspecification.html#cfn-dynamodb-table-pointintimerecoveryspecification-pointintimerecoveryenabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  or ``undefined`` *(abstract)*


   .. py:class:: ProjectionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.cloudformation.TableResource.ProjectionProperty;

         .. code-tab:: javascript

            // cloudformation.TableResource.ProjectionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TableResource.ProjectionProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: nonKeyAttributes

         ``TableResource.ProjectionProperty.NonKeyAttributes``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-projectionobject.html#cfn-dynamodb-projectionobj-nonkeyatt


         :type: :py:class:`@aws-cdk/cdk.Token`\  or (string or :py:class:`@aws-cdk/cdk.Token`\ )[] or ``undefined`` *(abstract)*


      .. py:attribute:: projectionType

         ``TableResource.ProjectionProperty.ProjectionType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-projectionobject.html#cfn-dynamodb-projectionobj-projtype


         :type: string or :py:class:`@aws-cdk/cdk.Token`\  or ``undefined`` *(abstract)*


   .. py:class:: ProvisionedThroughputProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.cloudformation.TableResource.ProvisionedThroughputProperty;

         .. code-tab:: javascript

            // cloudformation.TableResource.ProvisionedThroughputProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TableResource.ProvisionedThroughputProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: readCapacityUnits

         ``TableResource.ProvisionedThroughputProperty.ReadCapacityUnits``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-provisionedthroughput.html#cfn-dynamodb-provisionedthroughput-readcapacityunits


         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(abstract)*


      .. py:attribute:: writeCapacityUnits

         ``TableResource.ProvisionedThroughputProperty.WriteCapacityUnits``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-provisionedthroughput.html#cfn-dynamodb-provisionedthroughput-writecapacityunits


         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(abstract)*


   .. py:class:: SSESpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.cloudformation.TableResource.SSESpecificationProperty;

         .. code-tab:: javascript

            // cloudformation.TableResource.SSESpecificationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TableResource.SSESpecificationProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: sseEnabled

         ``TableResource.SSESpecificationProperty.SSEEnabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-table-ssespecification.html#cfn-dynamodb-table-ssespecification-sseenabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(abstract)*


   .. py:class:: StreamSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.cloudformation.TableResource.StreamSpecificationProperty;

         .. code-tab:: javascript

            // cloudformation.TableResource.StreamSpecificationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TableResource.StreamSpecificationProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: streamViewType

         ``TableResource.StreamSpecificationProperty.StreamViewType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-streamspecification.html#cfn-dynamodb-streamspecification-streamviewtype


         :type: string or :py:class:`@aws-cdk/cdk.Token`\  *(abstract)*


   .. py:class:: TimeToLiveSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.cloudformation.TableResource.TimeToLiveSpecificationProperty;

         .. code-tab:: javascript

            // cloudformation.TableResource.TimeToLiveSpecificationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TableResource.TimeToLiveSpecificationProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: attributeName

         ``TableResource.TimeToLiveSpecificationProperty.AttributeName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-timetolivespecification.html#cfn-dynamodb-timetolivespecification-attributename


         :type: string or :py:class:`@aws-cdk/cdk.Token`\  *(abstract)*


      .. py:attribute:: enabled

         ``TableResource.TimeToLiveSpecificationProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-timetolivespecification.html#cfn-dynamodb-timetolivespecification-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(abstract)*



   .. py:method:: addChild(child, childName)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.addChild>`

      Adds a child construct to this node.


      *Protected method*

      :param child: The child construct
      :type child: :py:class:`@aws-cdk/cdk.Construct`\ 
      :param childName: 
      :type childName: string
      :return: The resolved path part name of the child


   .. py:method:: addError(message) -> @aws-cdk/cdk.Construct

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.addError>`

      Adds an { error: <message> } metadata entry to this construct. The toolkit will fail synthesis when errors are reported.


      :param message: The error message.
      :type message: string
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\ 


   .. py:method:: addInfo(message) -> @aws-cdk/cdk.Construct

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.addInfo>`

      Adds a { "aws:cdk:info": <message> } metadata entry to this construct. The toolkit will display the info message when apps are synthesized.


      :param message: The info message.
      :type message: string
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\ 


   .. py:method:: addMetadata(type, [data, [from]]) -> @aws-cdk/cdk.Construct

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.addMetadata>`

      Adds a metadata entry to this construct. Entries are arbitrary values and will also include a stack trace to allow tracing back to the code location for when the entry was added. It can be used, for example, to include source mapping in CloudFormation templates to improve diagnostics.


      :param type: a string denoting the type of metadata
      :type type: string
      :param data: the value of the metadata (can be a Token). If null/undefined, metadata will not be added.
      :type data: any or ``undefined``
      :param from: a function under which to restrict the metadata entry's stack trace (defaults to this.addMetadata)
      :type from: any or ``undefined``
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\ 


   .. py:method:: addWarning(message) -> @aws-cdk/cdk.Construct

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.addWarning>`

      Adds a { warning: <message> } metadata entry to this construct. The toolkit will display the warning when an app is synthesized, or fail if run in --strict mode.


      :param message: The warning message.
      :type message: string
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\ 


   .. py:method:: ancestors([upTo]) -> @aws-cdk/cdk.Construct[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.ancestors>`

      Return the ancestors (including self) of this Construct up until and excluding the indicated component


      :param upTo: 
      :type upTo: :py:class:`@aws-cdk/cdk.Construct`\  or ``undefined``
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\ []


   .. py:method:: findChild(path) -> @aws-cdk/cdk.Construct

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.findChild>`

      Return a descendant by path  Throws an exception if the descendant is not found.


      :param path: 
      :type path: string
      :return: Child with the given path.
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\ 


   .. py:method:: getContext(key) -> any

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.getContext>`

      Retrieves a value from tree context.  Context is usually initialized at the root, but can be overridden at any point in the tree.


      :param key: The context key
      :type key: string
      :return: The context value or undefined
      :rtype: any or ``undefined``


   .. py:method:: lock()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.lock>`

      Locks this construct from allowing more children to be added. After this call, no more children can be added to this construct or to any children.


      *Protected method*



   .. py:method:: requireContext(key) -> any

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.requireContext>`

      Retrieve a value from tree-global context  It is an error if the context object is not available.


      :param key: 
      :type key: string
      :rtype: any or ``undefined``


   .. py:method:: required(props, name) -> any

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.required>`

      Throws if the `props` bag doesn't include the property `name`. In the future we can add some type-checking here, maybe even auto-generate during compilation.


      *Protected method*

      :param props: The props bag.
      :type props: any or ``undefined``
      :param name: The name of the required property.
      :type name: string
      :rtype: any or ``undefined``


   .. py:method:: setContext(key, [value])

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.setContext>`

      This can be used to set contextual values. Context must be set before any children are added, since children may consult context info during construction. If the key already exists, it will be overridden.


      :param key: The context key
      :type key: string
      :param value: The context value
      :type value: any or ``undefined``


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.


      :rtype: string


   .. py:method:: toTreeString([depth]) -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toTreeString>`

      Returns a string with a tree representation of this construct and it's children.


      :param depth: 
      :type depth: number or ``undefined``
      :rtype: string


   .. py:method:: tryFindChild(path) -> @aws-cdk/cdk.Construct

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.tryFindChild>`

      Return a descendant by path, or undefined


      :param path: 
      :type path: string
      :return: a child by path or undefined if not found.
      :rtype: :py:class:`@aws-cdk/cdk.Construct`\  or ``undefined``


   .. py:method:: unlock()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.unlock>`

      Unlocks this costruct and allows mutations (adding children).


      *Protected method*



   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      This method can be implemented by derived constructs in order to perform validation logic. It is called on all constructs before synthesis.


      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:method:: validateTree() -> @aws-cdk/cdk.ValidationError[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validateTree>`

      Invokes 'validate' on all child constructs and then on this construct (depth-first).


      :return: A list of validation errors. If the list is empty, all constructs are valid.
      :rtype: :py:class:`@aws-cdk/cdk.ValidationError`\ []


   .. py:attribute:: children

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.children>`

      All direct children of this construct.


      :type: :py:class:`@aws-cdk/cdk.Construct`\ [] *(readonly)*


   .. py:attribute:: id

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.id>`

      The local id of the construct. This id is unique amongst its siblings. To obtain a tree-global unique id for this construct, use `uniqueId`.


      :type: string *(readonly)*


   .. py:attribute:: locked

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.locked>`

      Returns true if this construct or any of it's parent constructs are locked.


      *Protected property*

      :type: boolean *(readonly)*


   .. py:attribute:: metadata

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.metadata>`

      An array of metadata objects associated with this construct. This can be used, for example, to implement support for deprecation notices, source mapping, etc.


      :type: :py:class:`@aws-cdk/cdk.MetadataEntry`\ [] *(readonly)*


   .. py:attribute:: path

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.path>`

      The full path of this construct in the tree. Components are separated by '/'.


      :type: string *(readonly)*


   .. py:attribute:: uniqueId

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.uniqueId>`

      A tree-global unique alphanumeric identifier for this construct. Includes all components of the tree.


      :type: string *(readonly)*


   .. py:attribute:: parent

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.parent>`

      Returns the parent of this node or undefined if this is a root node.


      :type: :py:class:`@aws-cdk/cdk.Construct`\  or ``undefined`` *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.Referenceable <@aws-cdk/cdk.Referenceable.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.


      :type: string *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.


      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependency(*other)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDependency>`

      Adds a dependency on another resource.


      :param \*other: The other resource.
      :type \*other: :py:class:`@aws-cdk/cdk.IDependable`\ 


   .. py:method:: addOverride(path, [value])

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a property override, either use `addPropertyOverride` or prefix `path` with "Properties." (i.e. `Properties.TopicName`).


      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any or ``undefined``


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.


      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, [value])

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyOverride>`

      Adds an override to a resource property.  Syntactic sugar for `addOverride("Properties.<...>", value)`.


      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any or ``undefined``


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CloudFormationToken

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.getAtt>`

      Returns a token for an runtime attribute of this resource. Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility in case there is no generated attribute.


      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CloudFormationToken`\ 


   .. py:method:: toCloudFormation() -> json

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.toCloudFormation>`

      Emits CloudFormation for this resource.


      :rtype: json


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.options>`

      Options for this resource, such as condition, update policy etc.


      :type: :py:class:`@aws-cdk/cdk.ResourceOptions`\  *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.resourceType>`

      AWS resource type.


      :type: string *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.properties>`

      AWS resource properties.  This object is rendered via a call to "renderProperties(this.properties)".


      *Protected property*

      :type: any or ``undefined`` *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.untypedPropertyOverrides>`

      AWS resource property overrides.  During synthesis, the method "renderProperties(this.overrides)" is called with this object, and merged on top of the output of "renderProperties(this.properties)".  Derived classes should expose a strongly-typed version of this object as a public property called `propertyOverrides`.


      *Protected property*

      :type: any or ``undefined`` *(readonly)*


   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: dependencyElements

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.dependencyElements>`

      Returns the set of all stack elements (resources, parameters, conditions) that should be added when a resource "depends on" this construct.


      :type: :py:class:`@aws-cdk/cdk.IDependable`\ [] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.logicalId>`

      The logical ID for this CloudFormation stack element


      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stackPath>`

      Return the path with respect to the stack


      :type: string *(readonly)*


   .. py:attribute:: stack

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stack>`

      The stack this Construct has been made a part of


      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Stack`\ 


TableResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TableResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.cloudformation.TableResourceProps;

      .. code-tab:: javascript

         // cloudformation.TableResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.TableResourceProps } from '@aws-cdk/aws-dynamodb';





   .. py:attribute:: keySchema

      ``AWS::DynamoDB::Table.KeySchema``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-keyschema


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`~@aws-cdk/aws-dynamodb.cloudformation.TableResource.KeySchemaProperty`\  or :py:class:`@aws-cdk/cdk.Token`\ )[] *(abstract)*


   .. py:attribute:: provisionedThroughput

      ``AWS::DynamoDB::Table.ProvisionedThroughput``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-provisionedthroughput


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.cloudformation.TableResource.ProvisionedThroughputProperty`\  *(abstract)*


   .. py:attribute:: attributeDefinitions

      ``AWS::DynamoDB::Table.AttributeDefinitions``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-attributedef


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.cloudformation.TableResource.AttributeDefinitionProperty`\ )[] or ``undefined`` *(abstract)*


   .. py:attribute:: globalSecondaryIndexes

      ``AWS::DynamoDB::Table.GlobalSecondaryIndexes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-gsi


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.cloudformation.TableResource.GlobalSecondaryIndexProperty`\ )[] or ``undefined`` *(abstract)*


   .. py:attribute:: localSecondaryIndexes

      ``AWS::DynamoDB::Table.LocalSecondaryIndexes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-lsi


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.cloudformation.TableResource.LocalSecondaryIndexProperty`\ )[] or ``undefined`` *(abstract)*


   .. py:attribute:: pointInTimeRecoverySpecification

      ``AWS::DynamoDB::Table.PointInTimeRecoverySpecification``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-pointintimerecoveryspecification


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.cloudformation.TableResource.PointInTimeRecoverySpecificationProperty`\  or ``undefined`` *(abstract)*


   .. py:attribute:: sseSpecification

      ``AWS::DynamoDB::Table.SSESpecification``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-ssespecification


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.cloudformation.TableResource.SSESpecificationProperty`\  or ``undefined`` *(abstract)*


   .. py:attribute:: streamSpecification

      ``AWS::DynamoDB::Table.StreamSpecification``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-streamspecification


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.cloudformation.TableResource.StreamSpecificationProperty`\  or ``undefined`` *(abstract)*


   .. py:attribute:: tableName

      ``AWS::DynamoDB::Table.TableName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-tablename


      :type: string or :py:class:`@aws-cdk/cdk.Token`\  or ``undefined`` *(abstract)*


   .. py:attribute:: tags

      ``AWS::DynamoDB::Table.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-tags


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`@aws-cdk/cdk.Tag`\ )[] or ``undefined`` *(abstract)*


   .. py:attribute:: timeToLiveSpecification

      ``AWS::DynamoDB::Table.TimeToLiveSpecification``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-timetolivespecification


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.cloudformation.TableResource.TimeToLiveSpecificationProperty`\  or ``undefined`` *(abstract)*



.. py:currentmodule:: @aws-cdk/aws-dynamodb

